--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "ts-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Artem Demo",
