--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "author": "Artem Demo",
   "devDependencies": {
-    "@types/node": "^16.11.9",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^5.0.0"
   },
-  "dependencies": {}
+  "packageManager": "yarn@4.1.1"
 }
